Add put and delete requests. Add error handling
